# marc

./: README.md  pyproject.toml
marc/: __main__.py  asgi.py  logging.py  settings.py  urls.py  wsgi.py
marc/dmarc/: apps.py  forms.py  models.py  parser.py  tests.py  urls.py  views.py
marc/dmarc/management/commands/: _logging.py  cleanall.py  loadreport.py
marc/dmarc/migrations/: 0001_initial.py
marc/dmarc/templates/: auth_results.bak.html  auth_results.html  auth_results_chart.js  base.html  bolt_icon.html  card.html  card_chart.html  card_figures.html  card_table.html  cog_icon.html  collect_button.html  config.html  config_form.html  dkim_auth_result.html  empty.html  fail_icon.html  feedback.html  feedback_list.html  feedback_records.html  feedback_row.html  file_form.html  help_icon.html  identifiers.html  index.html  main.html  messages.html  navbar.html  pass_icon.html  plus_icon.html  policy_evaluated.html  policy_published.html  record.html  record_list.html  record_row.html  report_metadata.html  row.html  spf_auth_result.html  spinner.html
marc/dmarc/templatetags/: dmarc_extras.py
marc/report/: __init__.py  dmarc_relaxed.py
marc/static/: jetbrainsmono.css  neuehaasgrotesk.css  styles.css
tests/data/: amazon.xml  fastmail.xml  google.xml  outlook.xml  zoho.xml
